# psearch

./: .gitignore  Cargo.toml  README.md
benches/: level_search.rs  playground.rs  select_rank.rs  slouds.rs  succinct.rs  xfast_set.rs
crates/bit_parallel/: Cargo.toml
crates/bytemap/: Cargo.toml
crates/level_search/: Cargo.toml
crates/level_search/examples/: profile_lss.rs
crates/level_search/src/: lib.rs
crates/level_search/src/level_search/: mod.rs  u32.rs  u64.rs
crates/level_search/src/xfast/: map.rs
crates/level_search/src/yfast/: mod.rs  set.rs  tree.rs
crates/level_search/tests/: test_level_search.rs
crates/succinct/: Cargo.toml
crates/succinct/benches/: select_rank.rs  succinct.rs
crates/succinct/src/: lib.rs
crates/succinct/src/louds/: slouds.rs
crates/succinct/src/louds/louds/: values.rs
crates/succinct/src/select_rank/: bits256.rs  bits512.rs  bitvec.rs  sbitvec.rs  u64.rs
crates/succinct/src/tree/: mod.rs
crates/succinct/tests/: test_select_rank.rs  test_succinct.rs
examples/: bitvec_insert.rs  bitvec_rank.rs  profile.rs  slouds_rank.rs  xfast_random_insert.rs  xfast_successor.rs
src/: bytemap.rs  lib.rs  utils.rs  xfast.rs
src/array/: mod.rs  u8x3.rs  u9x7.rs
src/level_search/: mod.rs  u32.rs  u64.rs
src/select_rank/: bits256.rs  bits512.rs  bitvec.rs  mod.rs  sbitvec.rs  u64.rs
src/succinct/: mod.rs  select_rank.rs  slouds.rs
src/tree/: mod.rs  ptr.rs
src/xfast/: map.rs  mod.rs  (+1 more)
tests/: test_bytemap.rs  test_level_search.rs  test_select_rank.rs  test_succinct.rs  test_xfast.proptest-regressions  test_xfast.rs
(+27 files in other folders)
