[package]
name = "psearch"
version = "0.1.0"
authors = ["Alan Du <alanhdu@gmail.com>"]
edition = "2018"

[dependencies]
fnv = "1.0"

[dev-dependencies]
clap = "2"
criterion = "0.2"
rand = "0.6"
proptest = "0.9"
structopt = "0.2"

[[bench]]
name = "level_search"
harness = false

[[bench]]
name = "succinct"
harness = false

[profile.release]
debug = true
