[package]
name = "succinct"
version = "0.1.0"
authors = ["Alan Du <alanhdu@gmail.com>"]
edition = "2018"

[dependencies]
bit_parallel = { path = "../bit_parallel" }

[dev-dependencies]
bstr = "0.1"
rand = "0.6"
criterion = "0.2"
proptest = "0.9"

[[bench]]
name = "select_rank"
harness = false

[[bench]]
name = "succinct"
harness = false
